--- a/index.html
+++ b/index.html
@@ -840,7 +840,7 @@
     const Gallery = () => {
       const images = [
         'imgs/number1_2.jpg', 'imgs/number1.jpg', // รูปคู่บน
-        'imgs/number9.jpg', 'imgs/number9_2.jpg', // รูปตั้งกลาง
+        'imgs/fix.jpg', 'imgs/number9_2.jpg', // รูปตั้งกลาง
         'imgs/number_last.jpg',                     // รูปเดี่ยวล่าง
       ];
 
