--- a/index.html
+++ b/index.html
@@ -840,7 +840,7 @@
     const Gallery = () => {
       const images = [
         'imgs/number1_2.jpg', 'imgs/number1.jpg', // รูปคู่บน
-        '/imgs/fix.jpg', 'imgs/number9_2.jpg', // รูปตั้งกลาง
+        'imgs/fix.JPG', 'imgs/number9_2.jpg', // รูปตั้งกลาง
         'imgs/number_last.jpg',                     // รูปเดี่ยวล่าง
       ];
 
@@ -1227,7 +1227,7 @@
                 <div
                   className="w-full h-full bg-cover bg-center rounded-lg shadow-xl parallax"
                   style={{
-                    backgroundImage: `url('/imgs/ring.jpg')`,
+                    backgroundImage: `url('imgs/ring.JPG')`,
                     boxShadow: '0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05)',
                   }}
                 ></div>
