--- a/index.html
+++ b/index.html
@@ -852,32 +852,30 @@
           </h2>
 
           {/* แถว 1: แนวนอน 2 รูป */}
-          <div className="grid grid-cols-2 gap-4 mb-4">
-            <img src={images[0]} alt="img1" className="w-full h-[400px] object-cover rounded-lg shadow-md" />
-            <img src={images[1]} alt="img2" className="w-full h-[400px] object-cover rounded-lg shadow-md" />
+          <div className="grid grid-cols-1 sm:grid-cols-2 gap-4 mb-4">
+            <img src={images[0]} alt="img1" className="w-full h-auto max-h-[400px] object-cover rounded-lg shadow-md" />
+            <img src={images[1]} alt="img2" className="w-full h-auto max-h-[400px] object-cover rounded-lg shadow-md" />
           </div>
 
           {/* แถว 2: แนวตั้ง 2 รูป */}
-          <div className="grid grid-cols-2 gap-4 mb-4">
-            <img src={images[2]} alt="img3" className="w-full h-[400px] object-cover rounded-lg shadow-md" />
-            <img src={images[3]} alt="img4" className="w-full h-[400px] object-cover rounded-lg shadow-md" />
+          <div className="grid grid-cols-1 sm:grid-cols-2 gap-4 mb-4">
+            <img src={images[2]} alt="img3" className="w-full h-auto max-h-[400px] object-cover rounded-lg shadow-md" />
+            <img src={images[3]} alt="img4" className="w-full h-auto max-h-[400px] object-cover rounded-lg shadow-md" />
           </div>
 
           {/* ข้อความกลาง */}
           <p className="text-center text-xl text-[#E2AFAF] italic mb-4 fade-in-text"
-            style={{ fontFamily:"'Dancing Script', cursive", color: '#8B5A2B' }}>
+            style={{ fontFamily: "'Dancing Script', cursive", color: '#8B5A2B' }}>
             "She's my life partner."
           </p>
 
           {/* แถว 3: เดี่ยว 1 รูป */}
           <div>
-            <img src={images[4]} alt="img5" className="w-full h-[400px] object-cover rounded-lg shadow-md" />
+            <img src={images[4]} alt="img5" className="w-full h-auto max-h-[400px] object-cover rounded-lg shadow-md" />
           </div>
         </div>
       );
     };
-
-
 
 
     const ErrorBoundary = ({ children }) => {
@@ -1032,11 +1030,10 @@
               <div id="stars-js"></div>
               <div className="w-full md:w-1/2 h-[100vh] md:h-screen flex items-center justify-center p-0 md:p-8">
                 <div
-                  className="w-full h-full bg-cover bg-center md:rounded-lg parallax"
-                  style={{
-                    backgroundImage: `url('imgs/first2.png')`,
-                  }}
+                  className="w-full h-[60vh] sm:h-[80vh] md:h-screen bg-cover bg-center md:rounded-lg parallax"
+                  style={{ backgroundImage: `url('imgs/first2.png')` }}
                 ></div>
+
 
 
               </div>
