--- a/index.html
+++ b/index.html
@@ -865,7 +865,7 @@
 
           {/* ข้อความกลาง */}
           <p className="text-center text-xl text-[#E2AFAF] italic mb-4 fade-in-text"
-            style={{ fontFamily: "'Dancing Script', cursive", color: '#8B5A2B' }}>
+            style={{ fontFamily:"'Dancing Script', cursive", color: '#8B5A2B' }}>
             "She's my life partner."
           </p>
 
@@ -1030,10 +1030,11 @@
               <div id="stars-js"></div>
               <div className="w-full md:w-1/2 h-[100vh] md:h-screen flex items-center justify-center p-0 md:p-8">
                 <div
-                  className="w-full h-[60vh] sm:h-[80vh] md:h-screen bg-cover bg-center md:rounded-lg parallax"
-                  style={{ backgroundImage: `url('imgs/first2.png')` }}
+                  className="w-full h-full bg-cover bg-center md:rounded-lg parallax"
+                  style={{
+                    backgroundImage: `url('imgs/first2.png')`,
+                  }}
                 ></div>
-
 
 
               </div>
