--- a/index.html
+++ b/index.html
@@ -1028,12 +1028,11 @@
 
             <div className="section w-full flex flex-col md:flex-row items-center justify-center relative">
               <div id="stars-js"></div>
-              <div className="w-full md:w-1/2 h-[100vh] md:h-screen flex items-center justify-center p-0 md:p-8">
-                <div
-                  className="w-full h-auto md:h-screen bg-cover bg-center md:rounded-lg parallax"
-                  style={{ backgroundImage: `url('imgs/first2.png')` }}
-                ></div>
-              </div>
+              <div
+                className="w-full h-[60vh] sm:h-[80vh] md:h-screen bg-cover bg-center md:rounded-lg parallax"
+                style={{ backgroundImage: `url('imgs/first2.png')` }}
+              ></div>
+
 
               <div className="w-full md:w-1/2 flex flex-col items-center justify-center p-8 text-center">
                 <h1
