--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
     rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Thai:wght@300;400;700&display=swap" rel="stylesheet">
   <style>
+    html,
+    body {
+      width: 100%;
+      overflow-x: hidden;
+    }
+
     html {
       scroll-behavior: smooth;
     }
@@ -384,7 +390,7 @@
         font-size: 18px;
       }
 
-      .c Couple-container {
+      .couple-container {
         flex-direction: column;
         gap: 16px;
       }
