--- a/index.html
+++ b/index.html
@@ -734,7 +734,7 @@
           <div className="flex flex-col items-center justify-center mb-12">
             {/* โลโก้ NB */}
             <img
-              src="imgs/logo.png" // 👈 ใส่โลโก้ที่คุณต้องการ เช่น "imgs/logo-nb.png"
+              src="imgs/logo.PNG" // 👈 ใส่โลโก้ที่คุณต้องการ เช่น "imgs/logo-nb.png"
               alt="NB Logo"
               className="w-28 h-28 mb-6"
             />
@@ -1036,7 +1036,7 @@
               <div id="stars-js"></div>
               <div
                 className="w-full h-[60vh] sm:h-[80vh] md:h-screen bg-cover bg-center md:rounded-lg parallax"
-                style={{ backgroundImage: `url('imgs/first2.png')` }}
+                style={{ backgroundImage: `url('imgs/title.png')` }}
               ></div>
 
 
@@ -1226,7 +1226,15 @@
                 <div
                   className="w-full h-full bg-cover bg-center rounded-lg shadow-xl parallax"
                   style={{
-                    backgroundImage: `url('imgs/ring.JPG')`,
+                    backgroundImage: `url('imgs/ring2.JPG')`,
+                    boxShadow: '0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05)',
+                  }}
+                ></div>
+              </div><div className="w-full md:w-1/2 h-96 md:h-screen flex items-center justify-center p-4 md:p-8">
+                <div
+                  className="w-full h-full bg-cover bg-center rounded-lg shadow-xl parallax"
+                  style={{
+                    backgroundImage: `url('imgs/upring.JPG')`,
                     boxShadow: '0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05)',
                   }}
                 ></div>
