--- a/index.html
+++ b/index.html
@@ -1226,7 +1226,7 @@
                 <div
                   className="w-full h-full bg-cover bg-center rounded-lg shadow-xl parallax"
                   style={{
-                    backgroundImage: `url('imgs/ring2.JPG')`,
+                    backgroundImage: `url('imgs/ring2.png')`,
                     boxShadow: '0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05)',
                   }}
                 ></div>
