--- a/index.html
+++ b/index.html
@@ -734,7 +734,7 @@
           <div className="flex flex-col items-center justify-center mb-12">
             {/* โลโก้ NB */}
             <img
-              src="imgs/logo.PNG" // 👈 ใส่โลโก้ที่คุณต้องการ เช่น "imgs/logo-nb.png"
+              src="imgs/.PNG" // 👈 ใส่โลโก้ที่คุณต้องการ เช่น "imgs/logo-nb.png"
               alt="NB Logo"
               className="w-28 h-28 mb-6"
             />
@@ -1226,7 +1226,7 @@
                 <div
                   className="w-full h-full bg-cover bg-center rounded-lg shadow-xl parallax"
                   style={{
-                    backgroundImage: `url('imgs/ring2.png')`,
+                    backgroundImage: `url('imgs/ring2.jpg')`,
                     boxShadow: '0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05)',
                   }}
                 ></div>
@@ -1234,7 +1234,7 @@
                 <div
                   className="w-full h-full bg-cover bg-center rounded-lg shadow-xl parallax"
                   style={{
-                    backgroundImage: `url('imgs/upring.JPG')`,
+                    backgroundImage: `url('imgs/upring.jpg')`,
                     boxShadow: '0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05)',
                   }}
                 ></div>
