--- a/index.html
+++ b/index.html
@@ -734,7 +734,7 @@
           <div className="flex flex-col items-center justify-center mb-12">
             {/* โลโก้ NB */}
             <img
-              src="imgs/.png" // 👈 ใส่โลโก้ที่คุณต้องการ เช่น "imgs/logo-nb.png"
+              src="imgs/logo.png" // 👈 ใส่โลโก้ที่คุณต้องการ เช่น "imgs/logo-nb.png"
               alt="NB Logo"
               className="w-28 h-28 mb-6"
             />
