--- a/index.html
+++ b/index.html
@@ -611,8 +611,8 @@
     <!-- Facebook Open Graph Tags -->
   <meta property="og:title" content="Nat & Bat Wedding Invitation" />
   <meta property="og:description" content="ขอเชิญร่วมพิธีมงคลสมรส 26 กรกฎาคม 2568" />
-  <meta property="og:image" content="https://yourdomain.com/imgs/preview.jpg" />
-  <meta property="og:url" content="https://yourdomain.com/" />
+  <meta property="og:image" content="https://yourdomain.com/imgs/title.png" />
+  <meta property="og:url" content="https://natbat.netlify.app/" />
   <meta property="og:type" content="website" />
 
 </head>
