--- a/index.html
+++ b/index.html
@@ -681,10 +681,25 @@
     const Slider = () => {
       const [currentIndex, setCurrentIndex] = React.useState(0);
       const images = [
-        'imgs/set1_1.jpg',
-        'imgs/set1_2.jpg',
-        'imgs/set1_3.jpg',
-        'imgs/set1_5.jpg',
+        'imgs/set/set1.jpg',
+        'imgs/set/set2.jpg',
+        'imgs/set/set3.jpg',
+        'imgs/set/set5.jpg',
+        'imgs/set/set4.jpg',
+        'imgs/set/set6.jpg',
+        'imgs/set/set7.jpg',
+        'imgs/set/set8.jpg',
+        'imgs/set/set9.jpg',
+        'imgs/set/set10.jpg',
+        'imgs/set/set11.jpg',
+        'imgs/set/set12.jpg',
+        'imgs/set/set13.jpg',
+        'imgs/set/set14.jpg',
+        'imgs/set/set15.jpg',
+        'imgs/set/set16.jpg',
+        'imgs/set/set17.jpg',
+        'imgs/set/set18.jpg',
+        'imgs/set/set19.jpg',
       ];
 
       React.useEffect(() => {
