--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>NAT & BAT</title>
+  <!-- Open Graph Meta Tags สำหรับ Facebook -->
+  <meta property="og:title" content="Nat & Bat Wedding" />
+  <meta property="og:description"
+    content="ขอเรียนเชิญท่านร่วมเป็นเกียรติในพิธีมงคลสมรสของ Nat & Bat วันที่ 26 กรกฎาคม 2568" />
+  <meta property="og:image" content="https://wedding-n-b.vercel.app/imgs/title.jpg" />
+  <meta property="og:url" content="https://wedding-n-b.vercel.app/" />
+  <meta property="og:type" content="website" />
   <script src="https://cdn.jsdelivr.net/npm/react@18.3.1/umd/react.development.js" crossorigin></script>
   <script src="https://cdn.jsdelivr.net/npm/react-dom@18.3.1/umd/react-dom.development.js" crossorigin></script>
   <script src="https://cdn.jsdelivr.net/npm/@babel/standalone@7.25.7/babel.min.js" crossorigin></script>
