--- a/index.html
+++ b/index.html
@@ -1265,7 +1265,41 @@
                   }}
                 ></div>
               </div>
+
+              <div className="w-full md:w-1/2 h-96 md:h-screen flex items-center justify-center p-4 md:p-8">
+                <div className="w-full flex justify-center items-center gap-4 flex-wrap px-4 py-2">
+                  <div className="w-10 h-10 rounded-full" style={{ backgroundColor: '#EBCFC4' }}></div>
+                  <div className="w-10 h-10 rounded-full" style={{ backgroundColor: '#EADACB' }}></div>
+                  <div className="w-10 h-10 rounded-full" style={{ backgroundColor: '#D6BC9E' }}></div>
+                  <div className="w-10 h-10 rounded-full" style={{ backgroundColor: '#A98977' }}></div>
+                  <div className="w-10 h-10 rounded-full" style={{ backgroundColor: '#926D5A' }}></div>
+                </div>
+
+                <h2
+                  className="text-3xl md:text-4xl font-bold mb-4 fade-in-text"
+                  style={{
+                    fontFamily: "'Noto Serif Thai', serif",
+                    fontWeight: 700,
+                    color: '#F4B6C2',
+                    fontSize: '48px',
+                  }}
+                >
+                  Champagne & Ivory Color
+                </h2>
+                <p
+                  className="text-center"
+                  style={{
+                    fontFamily: "'Noto Serif Thai', serif",
+                    fontWeight: 300,
+                    color: '#A0A0A0',
+                  }}
+                >
+                  เป็นคู่สีที่ให้ความรู้สึกหรูหราและอบอุ่น สื่อถึงความบริสุทธิ์ ความรักที่หวานชื่นและความอ่อนโยนที่เป็นธรรมชาติ เหมาะสำหรับงานแต่งงานที่เรียบง่ายแต่เปี่ยมด้วยความสง่างาม
+                </p>
+              </div>
+
             </div>
+
 
             <div className="section w-full flex flex-col items-center justify-center bg-[#f3f4f6] p-8">
               <div className="flex items-center justify-center mb-4">
